# FastAPI

./: .env  Dockerfile  ReadME.md  auth.py  config.py  database.py  docker-compose.yaml  image_utils.py  info.txt  main.py  main_part1.py  main_part10.py  main_part12.py  main_part13.py  main_part2.py  main_part3.py  main_part6.py  main_part9.py  models.py  pyproject.toml  schemas.py
alembic/: env.py
alembic/versions/: 1d77d3040f31_initial_migration.py
app/: main.py  main_part14.py  main_part15.py  main_part16.py  main_part17.py
app/api/: posts.py  users.py
app/core/: auth.py  config.py  database.py
app/database/: schema.py
app/models/: models.py
app/services/: posts_service.py  users_service.py
app/templates/: account.html  forgot_password.html  layout.html  login.html  reset_password.html
app/templates/email/: password_reset.html
app/utils/: email.py  image.py  image_utils.py
old_steps_main/: main_part10.py  main_part11.py  main_part4.py  main_part5.py  main_part7.py  main_part8.py
populate_images/: user_7.txt
routers/: posts.py  users.py
scripts/: populate_magration_db.py  test_db.py
templates/: home.html  layout.html  post.html
tests/: check_oracle.py  conftest.py  test_db.py
tests/api/: test_posts.py  test_users.py
