[project]
name = "fastapi-blog-app"
version = "0.1.0"
description = "My FastAPI Blog Application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "fastapi>=0.110.0",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "jinja2>=3.1.2",
    "asyncpg>=0.29.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
    "python-slugify>=8.0.4",
    "email-validator>=2.3.0",
    "boto3>=1.43.40",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
